[package]
name = "wifi-visualizer"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5.4"
clap = "2.33.0"
env_logger = "0.7.1"
failure = "0.1.7"
futures = "0.3.4"
ieee80211 = { git = "https://github.com/SpiralP/rust-ieee80211.git", features = ["serde"] }
includedir = { git = "https://github.com/SpiralP/includedir.git" }
log = "0.4.8"
open = "1.4.0"
parceljs = { git = "https://github.com/SpiralP/rust-parceljs.git", branch = "next", features = ["warp"] }
pcap = { git = "https://github.com/SpiralP/rust-pcap.git" }
phf = "0.8.0"
radiotap = "1.3.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "0.2.13", features = ["full"] }
warp = "0.2.2"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.3.4"

[build-dependencies]
parceljs-builder = { git = "https://github.com/SpiralP/rust-parceljs.git", branch = "next" }
